--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -378,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "                      pct_chg  index  trade_year       CEFD      RIPO  NIPO  \\\ntrade_date ts_code                                                            \n20100104   000001.SH  -1.0185   4670        2010 -17.830000  0.000000   0.0   \n20100105   000001.SH   1.1844   4671        2010 -17.840000  0.000000   0.0   \n20100106   000001.SH  -0.8520   4672        2010 -17.720000  0.617127   3.0   \n20100107   000001.SH  -1.8880   4673        2010 -16.870000  0.058932   1.0   \n20100108   000001.SH   0.1009   4674        2010 -17.595926  0.319774   6.0   \n...                       ...    ...         ...        ...       ...   ...   \n20211227   000001.SH  -0.0575   7582        2021  -2.258667  0.079280   1.0   \n20211228   000001.SH   0.3910   7583        2021  -2.880625  0.107463   4.0   \n20211229   000001.SH  -0.9121   7584        2021  -2.787500  0.000000   0.0   \n20211230   000001.SH   0.6169   7585        2021  -3.135625  0.259762   3.0   \n20211231   000001.SH   0.5688   7586        2021   2.008500  0.441176   1.0   \n\n                         TURN   TURN_MA     SR    lnPD  \ntrade_date ts_code                                      \n20100104   000001.SH  0.00710 -0.006496  32.76 -0.3186  \n20100105   000001.SH  0.00819 -0.005408  32.76 -0.3186  \n20100106   000001.SH  0.00802 -0.005580  32.76 -0.3186  \n20100107   000001.SH  0.00834 -0.005263  32.76 -0.3186  \n20100108   000001.SH  0.00643 -0.007174  32.76 -0.3186  \n...                       ...       ...    ...     ...  \n20211227   000001.SH  0.00675  0.001142   6.95 -0.0318  \n20211228   000001.SH  0.00647  0.000860   6.95 -0.0318  \n20211229   000001.SH  0.00624  0.000628   6.95 -0.0318  \n20211230   000001.SH  0.00627  0.000655   6.95 -0.0318  \n20211231   000001.SH  0.00672  0.001102   6.95 -0.0318  \n\n[2917 rows x 10 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20100104</th>\n      <th>000001.SH</th>\n      <td>-1.0185</td>\n      <td>4670</td>\n      <td>2010</td>\n      <td>-17.830000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00710</td>\n      <td>-0.006496</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100105</th>\n      <th>000001.SH</th>\n      <td>1.1844</td>\n      <td>4671</td>\n      <td>2010</td>\n      <td>-17.840000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00819</td>\n      <td>-0.005408</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100106</th>\n      <th>000001.SH</th>\n      <td>-0.8520</td>\n      <td>4672</td>\n      <td>2010</td>\n      <td>-17.720000</td>\n      <td>0.617127</td>\n      <td>3.0</td>\n      <td>0.00802</td>\n      <td>-0.005580</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100107</th>\n      <th>000001.SH</th>\n      <td>-1.8880</td>\n      <td>4673</td>\n      <td>2010</td>\n      <td>-16.870000</td>\n      <td>0.058932</td>\n      <td>1.0</td>\n      <td>0.00834</td>\n      <td>-0.005263</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100108</th>\n      <th>000001.SH</th>\n      <td>0.1009</td>\n      <td>4674</td>\n      <td>2010</td>\n      <td>-17.595926</td>\n      <td>0.319774</td>\n      <td>6.0</td>\n      <td>0.00643</td>\n      <td>-0.007174</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20211227</th>\n      <th>000001.SH</th>\n      <td>-0.0575</td>\n      <td>7582</td>\n      <td>2021</td>\n      <td>-2.258667</td>\n      <td>0.079280</td>\n      <td>1.0</td>\n      <td>0.00675</td>\n      <td>0.001142</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211228</th>\n      <th>000001.SH</th>\n      <td>0.3910</td>\n      <td>7583</td>\n      <td>2021</td>\n      <td>-2.880625</td>\n      <td>0.107463</td>\n      <td>4.0</td>\n      <td>0.00647</td>\n      <td>0.000860</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211229</th>\n      <th>000001.SH</th>\n      <td>-0.9121</td>\n      <td>7584</td>\n      <td>2021</td>\n      <td>-2.787500</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00624</td>\n      <td>0.000628</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211230</th>\n      <th>000001.SH</th>\n      <td>0.6169</td>\n      <td>7585</td>\n      <td>2021</td>\n      <td>-3.135625</td>\n      <td>0.259762</td>\n      <td>3.0</td>\n      <td>0.00627</td>\n      <td>0.000655</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211231</th>\n      <th>000001.SH</th>\n      <td>0.5688</td>\n      <td>7586</td>\n      <td>2021</td>\n      <td>2.008500</td>\n      <td>0.441176</td>\n      <td>1.0</td>\n      <td>0.00672</td>\n      <td>0.001102</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n  </tbody>\n</table>\n<p>2917 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
     "    df = df.reset_index()\n",
     "\n",
     "    \"\"\"\n",
-    "    只有年份\n",
+    "    PD和SR只有年份数据\n",
     "    \"\"\"\n",
     "    df['trade_year'] = (df['trade_date'] // 10000).astype('int64')\n",
     "    df = df.set_index('trade_year').join(cal_sr().to_pandas(), how='outer').join(cal_pd().to_pandas(), how='outer')\n",
@@ -410,7 +410,6 @@
     "    \"\"\"\n",
     "    合并股指市场数据\n",
     "    \"\"\"\n",
-    "    # 20170824\n",
     "    df = (\n",
     "            pd.merge(\n",
     "                    pd.read_parquet('/data/DataSets/investor_sentiment/IDX_BAR_PANEL.parquet',\n",
@@ -460,17 +459,17 @@
       "\n",
       "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
       "-------------+---------------------------------------------------------\n",
-      "     pct_chg |      7,811    .0693997    2.377133   -16.3937   105.2691\n",
-      "       index |      7,811        3906    2254.986          1       7811\n",
-      "  trade_year |      7,811    2006.358    9.273684       1990       2022\n",
-      "        CEFD |      7,811   -3.258462    7.839892  -34.78167     133.71\n",
-      "        RIPO |      7,811     .388489    1.404912    -.96225   48.89698\n",
+      "     pct_chg |      2,917    .0123382    1.316958    -8.4909     5.7635\n",
+      "       index |      2,917        6128    842.2097       4670       7586\n",
+      "  trade_year |      2,917    2015.505    3.450968       2010       2021\n",
+      "        CEFD |      2,917   -9.066944    4.697672     -21.36    15.7225\n",
+      "        RIPO |      2,917     .335359    .7588905   -.202256   19.42581\n",
       "-------------+---------------------------------------------------------\n",
-      "        NIPO |      7,811    .6652157    1.288655          0         28\n",
-      "        TURN |      7,811    .0097375    .0091799     .00001     .13126\n",
-      "     TURN_MA |      7,811   -.0006361    .0065801  -.0139077   .0651523\n",
-      "          SR |      7,811    27.74854    22.13282          0      88.27\n",
-      "        lnPD |      7,811   -.2041355    .2819073    -1.4346          0\n"
+      "        NIPO |      2,917    1.027425    1.566518          0         25\n",
+      "        TURN |      2,917    .0057862    .0034802     .00166     .02701\n",
+      "     TURN_MA |      2,917    -.001447    .0046863  -.0107494   .0220632\n",
+      "          SR |      2,917    16.77931    8.833098       6.23      32.76\n",
+      "        lnPD |      2,917   -.1945728    .0995059     -.3537      -.027\n"
      ]
     }
    ],
