--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -450,32 +450,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
-      "-------------+---------------------------------------------------------\n",
-      "     pct_chg |      2,917    .0123382    1.316958    -8.4909     5.7635\n",
-      "       index |      2,917        6128    842.2097       4670       7586\n",
-      "  trade_year |      2,917    2015.505    3.450968       2010       2021\n",
-      "        CEFD |      2,917   -9.066944    4.697672     -21.36    15.7225\n",
-      "        RIPO |      2,917     .335359    .7588905   -.202256   19.42581\n",
-      "-------------+---------------------------------------------------------\n",
-      "        NIPO |      2,917    1.027425    1.566518          0         25\n",
-      "        TURN |      2,917    .0057862    .0034802     .00166     .02701\n",
-      "     TURN_MA |      2,917    -.001447    .0046863  -.0107494   .0220632\n",
-      "          SR |      2,917    16.77931    8.833098       6.23      32.76\n",
-      "        lnPD |      2,917   -.1945728    .0995059     -.3537      -.027\n"
+      ". /*主成分分析*/\n",
+      ". pca CEFD RIPO NIPO TURN SR lnPD, means\n",
+      "\n",
+      "Principal components/correlation                 Number of obs    =      2,917\n",
+      "                                                 Number of comp.  =          6\n",
+      "                                                 Trace            =          6\n",
+      "    Rotation: (unrotated = principal)            Rho              =     1.0000\n",
+      "\n",
+      "    --------------------------------------------------------------------------\n",
+      "       Component |   Eigenvalue   Difference         Proportion   Cumulative\n",
+      "    -------------+------------------------------------------------------------\n",
+      "           Comp1 |      2.15079      .953806             0.3585       0.3585\n",
+      "           Comp2 |      1.19698      .101253             0.1995       0.5580\n",
+      "           Comp3 |      1.09573      .367286             0.1826       0.7406\n",
+      "           Comp4 |      .728445      .134371             0.1214       0.8620\n",
+      "           Comp5 |      .594074      .360099             0.0990       0.9610\n",
+      "           Comp6 |      .233975            .             0.0390       1.0000\n",
+      "    --------------------------------------------------------------------------\n",
+      "\n",
+      "Principal components (eigenvectors) \n",
+      "\n",
+      "    --------------------------------------------------------------------------\n",
+      "        Variable |    Comp1     Comp2     Comp3     Comp4     Comp5     Comp6 \n",
+      "    -------------+------------------------------------------------------------\n",
+      "            CEFD |   0.2638   -0.2224    0.6408    0.6821    0.0549   -0.0454 \n",
+      "            RIPO |   0.4608    0.3345    0.0951   -0.2277    0.7777   -0.1002 \n",
+      "            NIPO |   0.2811    0.5199    0.4644   -0.3371   -0.5583   -0.0984 \n",
+      "            TURN |  -0.0036    0.6913   -0.3838    0.5993   -0.0586    0.1103 \n",
+      "              SR |  -0.5328    0.2227    0.4195   -0.0900    0.2268    0.6565 \n",
+      "            lnPD |   0.5960   -0.2022   -0.2035   -0.0438   -0.1599    0.7315 \n",
+      "    --------------------------------------------------------------------------\n",
+      "\n",
+      "    ---------------------------\n",
+      "        Variable | Unexplained \n",
+      "    -------------+-------------\n",
+      "            CEFD |           0 \n",
+      "            RIPO |           0 \n",
+      "            NIPO |           0 \n",
+      "            TURN |           0 \n",
+      "              SR |           0 \n",
+      "            lnPD |           0 \n",
+      "    ---------------------------\n",
+      "\n",
+      "Summary statistics of the variables\n",
+      "\n",
+      "  -------------------------------------------------------------------\n",
+      "      Variable |         Mean      Std. dev.         Min          Max\n",
+      "  -------------+-----------------------------------------------------\n",
+      "          CEFD |    -9.066944      4.697672       -21.36      15.7225\n",
+      "          RIPO |      .335359      .7588905     -.202256     19.42581\n",
+      "          NIPO |     1.027425      1.566518            0           25\n",
+      "          TURN |     .0057862      .0034802       .00166       .02701\n",
+      "            SR |     16.77931      8.833098         6.23        32.76\n",
+      "          lnPD |    -.1945728      .0995059       -.3537        -.027\n",
+      "  -------------------------------------------------------------------\n",
+      "\n",
+      ". \n"
      ]
     }
    ],
    "source": [
     "%%stata -d df_pca -force\n",
-    "sum"
+    "/*主成分分析*/\n",
+    "\n",
+    "/*主成分分析*/\n",
+    "pca CEFD RIPO NIPO TURN SR lnPD, means"
    ],
    "metadata": {
     "collapsed": false
