--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -378,20 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "                      pct_chg  index  trade_year       CEFD      RIPO  NIPO  \\\ntrade_date ts_code                                                            \n20100104   000001.SH  -1.0185   4670        2010 -17.830000  0.000000   0.0   \n20100105   000001.SH   1.1844   4671        2010 -17.840000  0.000000   0.0   \n20100106   000001.SH  -0.8520   4672        2010 -17.720000  0.617127   3.0   \n20100107   000001.SH  -1.8880   4673        2010 -16.870000  0.058932   1.0   \n20100108   000001.SH   0.1009   4674        2010 -17.595926  0.319774   6.0   \n...                       ...    ...         ...        ...       ...   ...   \n20211227   000001.SH  -0.0575   7582        2021  -2.258667  0.079280   1.0   \n20211228   000001.SH   0.3910   7583        2021  -2.880625  0.107463   4.0   \n20211229   000001.SH  -0.9121   7584        2021  -2.787500  0.000000   0.0   \n20211230   000001.SH   0.6169   7585        2021  -3.135625  0.259762   3.0   \n20211231   000001.SH   0.5688   7586        2021   2.008500  0.441176   1.0   \n\n                         TURN   TURN_MA     SR    lnPD  \ntrade_date ts_code                                      \n20100104   000001.SH  0.00710 -0.006496  32.76 -0.3186  \n20100105   000001.SH  0.00819 -0.005408  32.76 -0.3186  \n20100106   000001.SH  0.00802 -0.005580  32.76 -0.3186  \n20100107   000001.SH  0.00834 -0.005263  32.76 -0.3186  \n20100108   000001.SH  0.00643 -0.007174  32.76 -0.3186  \n...                       ...       ...    ...     ...  \n20211227   000001.SH  0.00675  0.001142   6.95 -0.0318  \n20211228   000001.SH  0.00647  0.000860   6.95 -0.0318  \n20211229   000001.SH  0.00624  0.000628   6.95 -0.0318  \n20211230   000001.SH  0.00627  0.000655   6.95 -0.0318  \n20211231   000001.SH  0.00672  0.001102   6.95 -0.0318  \n\n[2917 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20100104</th>\n      <th>000001.SH</th>\n      <td>-1.0185</td>\n      <td>4670</td>\n      <td>2010</td>\n      <td>-17.830000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00710</td>\n      <td>-0.006496</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100105</th>\n      <th>000001.SH</th>\n      <td>1.1844</td>\n      <td>4671</td>\n      <td>2010</td>\n      <td>-17.840000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00819</td>\n      <td>-0.005408</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100106</th>\n      <th>000001.SH</th>\n      <td>-0.8520</td>\n      <td>4672</td>\n      <td>2010</td>\n      <td>-17.720000</td>\n      <td>0.617127</td>\n      <td>3.0</td>\n      <td>0.00802</td>\n      <td>-0.005580</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100107</th>\n      <th>000001.SH</th>\n      <td>-1.8880</td>\n      <td>4673</td>\n      <td>2010</td>\n      <td>-16.870000</td>\n      <td>0.058932</td>\n      <td>1.0</td>\n      <td>0.00834</td>\n      <td>-0.005263</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100108</th>\n      <th>000001.SH</th>\n      <td>0.1009</td>\n      <td>4674</td>\n      <td>2010</td>\n      <td>-17.595926</td>\n      <td>0.319774</td>\n      <td>6.0</td>\n      <td>0.00643</td>\n      <td>-0.007174</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20211227</th>\n      <th>000001.SH</th>\n      <td>-0.0575</td>\n      <td>7582</td>\n      <td>2021</td>\n      <td>-2.258667</td>\n      <td>0.079280</td>\n      <td>1.0</td>\n      <td>0.00675</td>\n      <td>0.001142</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211228</th>\n      <th>000001.SH</th>\n      <td>0.3910</td>\n      <td>7583</td>\n      <td>2021</td>\n      <td>-2.880625</td>\n      <td>0.107463</td>\n      <td>4.0</td>\n      <td>0.00647</td>\n      <td>0.000860</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211229</th>\n      <th>000001.SH</th>\n      <td>-0.9121</td>\n      <td>7584</td>\n      <td>2021</td>\n      <td>-2.787500</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00624</td>\n      <td>0.000628</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211230</th>\n      <th>000001.SH</th>\n      <td>0.6169</td>\n      <td>7585</td>\n      <td>2021</td>\n      <td>-3.135625</td>\n      <td>0.259762</td>\n      <td>3.0</td>\n      <td>0.00627</td>\n      <td>0.000655</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211231</th>\n      <th>000001.SH</th>\n      <td>0.5688</td>\n      <td>7586</td>\n      <td>2021</td>\n      <td>2.008500</td>\n      <td>0.441176</td>\n      <td>1.0</td>\n      <td>0.00672</td>\n      <td>0.001102</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n  </tbody>\n</table>\n<p>2917 rows × 10 columns</p>\n</div>"
+      "text/plain": "                      pct_chg  index  trade_year      CEFD      RIPO  \\\ntrade_date ts_code                                                     \n20100104   000001.SH  -1.0185   4670        2010 -1.865404 -0.441907   \n20100105   000001.SH   1.1844   4671        2010 -1.867533 -0.441907   \n20100106   000001.SH  -0.8520   4672        2010 -1.841988  0.371289   \n20100107   000001.SH  -1.8880   4673        2010 -1.661047 -0.364251   \n20100108   000001.SH   0.1009   4674        2010 -1.815576 -0.020536   \n...                       ...    ...         ...       ...       ...   \n20211227   000001.SH  -0.0575   7582        2021  1.449287 -0.337439   \n20211228   000001.SH   0.3910   7583        2021  1.316890 -0.300302   \n20211229   000001.SH  -0.9121   7584        2021  1.336714 -0.441907   \n20211230   000001.SH   0.6169   7585        2021  1.262608 -0.099615   \n20211231   000001.SH   0.5688   7586        2021  2.357645  0.139436   \n\n                          NIPO      TURN   TURN_MA        SR     lnPD  \ntrade_date ts_code                                                     \n20100104   000001.SH -0.655866  0.377500 -0.006496  1.809183 -1.24643  \n20100105   000001.SH -0.655866  0.690704 -0.005408  1.809183 -1.24643  \n20100106   000001.SH  1.259209  0.641856 -0.005580  1.809183 -1.24643  \n20100107   000001.SH -0.017507  0.733806 -0.005263  1.809183 -1.24643  \n20100108   000001.SH  3.174284  0.184980 -0.007174  1.809183 -1.24643  \n...                        ...       ...       ...       ...      ...  \n20211227   000001.SH -0.017507  0.276930  0.001142 -1.112781  1.63581  \n20211228   000001.SH  1.897568  0.196474  0.000860 -1.112781  1.63581  \n20211229   000001.SH -0.655866  0.130385  0.000628 -1.112781  1.63581  \n20211230   000001.SH  1.259209  0.139005  0.000655 -1.112781  1.63581  \n20211231   000001.SH -0.017507  0.268310  0.001102 -1.112781  1.63581  \n\n[2917 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20100104</th>\n      <th>000001.SH</th>\n      <td>-1.0185</td>\n      <td>4670</td>\n      <td>2010</td>\n      <td>-1.865404</td>\n      <td>-0.441907</td>\n      <td>-0.655866</td>\n      <td>0.377500</td>\n      <td>-0.006496</td>\n      <td>1.809183</td>\n      <td>-1.24643</td>\n    </tr>\n    <tr>\n      <th>20100105</th>\n      <th>000001.SH</th>\n      <td>1.1844</td>\n      <td>4671</td>\n      <td>2010</td>\n      <td>-1.867533</td>\n      <td>-0.441907</td>\n      <td>-0.655866</td>\n      <td>0.690704</td>\n      <td>-0.005408</td>\n      <td>1.809183</td>\n      <td>-1.24643</td>\n    </tr>\n    <tr>\n      <th>20100106</th>\n      <th>000001.SH</th>\n      <td>-0.8520</td>\n      <td>4672</td>\n      <td>2010</td>\n      <td>-1.841988</td>\n      <td>0.371289</td>\n      <td>1.259209</td>\n      <td>0.641856</td>\n      <td>-0.005580</td>\n      <td>1.809183</td>\n      <td>-1.24643</td>\n    </tr>\n    <tr>\n      <th>20100107</th>\n      <th>000001.SH</th>\n      <td>-1.8880</td>\n      <td>4673</td>\n      <td>2010</td>\n      <td>-1.661047</td>\n      <td>-0.364251</td>\n      <td>-0.017507</td>\n      <td>0.733806</td>\n      <td>-0.005263</td>\n      <td>1.809183</td>\n      <td>-1.24643</td>\n    </tr>\n    <tr>\n      <th>20100108</th>\n      <th>000001.SH</th>\n      <td>0.1009</td>\n      <td>4674</td>\n      <td>2010</td>\n      <td>-1.815576</td>\n      <td>-0.020536</td>\n      <td>3.174284</td>\n      <td>0.184980</td>\n      <td>-0.007174</td>\n      <td>1.809183</td>\n      <td>-1.24643</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20211227</th>\n      <th>000001.SH</th>\n      <td>-0.0575</td>\n      <td>7582</td>\n      <td>2021</td>\n      <td>1.449287</td>\n      <td>-0.337439</td>\n      <td>-0.017507</td>\n      <td>0.276930</td>\n      <td>0.001142</td>\n      <td>-1.112781</td>\n      <td>1.63581</td>\n    </tr>\n    <tr>\n      <th>20211228</th>\n      <th>000001.SH</th>\n      <td>0.3910</td>\n      <td>7583</td>\n      <td>2021</td>\n      <td>1.316890</td>\n      <td>-0.300302</td>\n      <td>1.897568</td>\n      <td>0.196474</td>\n      <td>0.000860</td>\n      <td>-1.112781</td>\n      <td>1.63581</td>\n    </tr>\n    <tr>\n      <th>20211229</th>\n      <th>000001.SH</th>\n      <td>-0.9121</td>\n      <td>7584</td>\n      <td>2021</td>\n      <td>1.336714</td>\n      <td>-0.441907</td>\n      <td>-0.655866</td>\n      <td>0.130385</td>\n      <td>0.000628</td>\n      <td>-1.112781</td>\n      <td>1.63581</td>\n    </tr>\n    <tr>\n      <th>20211230</th>\n      <th>000001.SH</th>\n      <td>0.6169</td>\n      <td>7585</td>\n      <td>2021</td>\n      <td>1.262608</td>\n      <td>-0.099615</td>\n      <td>1.259209</td>\n      <td>0.139005</td>\n      <td>0.000655</td>\n      <td>-1.112781</td>\n      <td>1.63581</td>\n    </tr>\n    <tr>\n      <th>20211231</th>\n      <th>000001.SH</th>\n      <td>0.5688</td>\n      <td>7586</td>\n      <td>2021</td>\n      <td>2.357645</td>\n      <td>0.139436</td>\n      <td>-0.017507</td>\n      <td>0.268310</td>\n      <td>0.001102</td>\n      <td>-1.112781</td>\n      <td>1.63581</td>\n    </tr>\n  </tbody>\n</table>\n<p>2917 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def merge_bw():\n",
+    "def merge_bw(is_standard=True):\n",
     "    \"\"\"\n",
     "    合成函数\n",
     "    \"\"\"\n",
@@ -421,10 +421,18 @@
     "    )\n",
     "\n",
     "    \"\"\"\n",
-    "    空值处理,IPO填充0,CEFD用历史数据回填\n",
+    "    空值处理\n",
+    "    IPO填充0,CEFD用历史数据回填\n",
     "    \"\"\"\n",
     "    df.loc[:, ['RIPO', 'NIPO']] = df.loc[:, ['RIPO', 'NIPO']].fillna(value=0)\n",
     "    df.loc[:, ['CEFD']] = df.loc[:, ['CEFD']].fillna(method=\"ffill\")\n",
+    "\n",
+    "    \"\"\"\n",
+    "    标准化\n",
+    "    \"\"\"\n",
+    "    if is_standard:\n",
+    "        standard_cols = ['CEFD', 'RIPO', 'NIPO', 'TURN', 'SR', 'lnPD']\n",
+    "        df.loc[:, standard_cols] = (df[standard_cols] - df[standard_cols].mean()) / df[standard_cols].std()\n",
     "\n",
     "    return df\n",
     "\n",
@@ -450,14 +458,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      ". /*主成分分析*/\n",
+      ". //缩尾\n",
+      ". winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
+      "\n",
+      ". \n",
+      ". //共线性测试\n",
+      ". factortest CEFD NIPO RIPO SR TURN lnPD\n",
+      "    \n",
+      "Determinant of the correlation matrix\n",
+      "Det                =     0.228\n",
+      " \n",
+      " \n",
+      "Bartlett test of sphericity\n",
+      "    \n",
+      "Chi-square         =          4302.226\n",
+      "Degrees of freedom =                15\n",
+      "p-value            =             0.000\n",
+      "H0: variables are not intercorrelated\n",
+      " \n",
+      " \n",
+      "Kaiser-Meyer-Olkin Measure of Sampling Adequacy\n",
+      "KMO               =     0.591\n",
+      " \n",
+      "\n",
+      ". \n",
+      ". //主成分分析\n",
       ". pca CEFD RIPO NIPO TURN SR lnPD, means\n",
       "\n",
       "Principal components/correlation                 Number of obs    =      2,917\n",
@@ -468,12 +500,12 @@
       "    --------------------------------------------------------------------------\n",
       "       Component |   Eigenvalue   Difference         Proportion   Cumulative\n",
       "    -------------+------------------------------------------------------------\n",
-      "           Comp1 |      2.15079      .953806             0.3585       0.3585\n",
-      "           Comp2 |      1.19698      .101253             0.1995       0.5580\n",
-      "           Comp3 |      1.09573      .367286             0.1826       0.7406\n",
-      "           Comp4 |      .728445      .134371             0.1214       0.8620\n",
-      "           Comp5 |      .594074      .360099             0.0990       0.9610\n",
-      "           Comp6 |      .233975            .             0.0390       1.0000\n",
+      "           Comp1 |      2.27489      1.07221             0.3791       0.3791\n",
+      "           Comp2 |      1.20268     .0784837             0.2004       0.5796\n",
+      "           Comp3 |      1.12419      .405131             0.1874       0.7670\n",
+      "           Comp4 |      .719062      .269614             0.1198       0.8868\n",
+      "           Comp5 |      .449447       .21971             0.0749       0.9617\n",
+      "           Comp6 |      .229737            .             0.0383       1.0000\n",
       "    --------------------------------------------------------------------------\n",
       "\n",
       "Principal components (eigenvectors) \n",
@@ -481,12 +513,12 @@
       "    --------------------------------------------------------------------------\n",
       "        Variable |    Comp1     Comp2     Comp3     Comp4     Comp5     Comp6 \n",
       "    -------------+------------------------------------------------------------\n",
-      "            CEFD |   0.2638   -0.2224    0.6408    0.6821    0.0549   -0.0454 \n",
-      "            RIPO |   0.4608    0.3345    0.0951   -0.2277    0.7777   -0.1002 \n",
-      "            NIPO |   0.2811    0.5199    0.4644   -0.3371   -0.5583   -0.0984 \n",
-      "            TURN |  -0.0036    0.6913   -0.3838    0.5993   -0.0586    0.1103 \n",
-      "              SR |  -0.5328    0.2227    0.4195   -0.0900    0.2268    0.6565 \n",
-      "            lnPD |   0.5960   -0.2022   -0.2035   -0.0438   -0.1599    0.7315 \n",
+      "            CEFD |   0.2550   -0.1748    0.6403    0.7007    0.0465   -0.0346 \n",
+      "            RIPO |   0.5033    0.3219    0.0526   -0.2077    0.7626   -0.1247 \n",
+      "            NIPO |   0.3295    0.5372    0.4023   -0.3201   -0.5743   -0.0928 \n",
+      "            TURN |   0.0116    0.6432   -0.4664    0.5926   -0.0671    0.1135 \n",
+      "              SR |  -0.4976    0.3119    0.4109   -0.1010    0.2462    0.6446 \n",
+      "            lnPD |   0.5704   -0.2572   -0.1973   -0.0453   -0.1458    0.7391 \n",
       "    --------------------------------------------------------------------------\n",
       "\n",
       "    ---------------------------\n",
@@ -505,12 +537,12 @@
       "  -------------------------------------------------------------------\n",
       "      Variable |         Mean      Std. dev.         Min          Max\n",
       "  -------------+-----------------------------------------------------\n",
-      "          CEFD |    -9.066944      4.697672       -21.36      15.7225\n",
-      "          RIPO |      .335359      .7588905     -.202256     19.42581\n",
-      "          NIPO |     1.027425      1.566518            0           25\n",
-      "          TURN |     .0057862      .0034802       .00166       .02701\n",
-      "            SR |     16.77931      8.833098         6.23        32.76\n",
-      "          lnPD |    -.1945728      .0995059       -.3537        -.027\n",
+      "          CEFD |    -.0031374      .9836972    -2.221507      1.96841\n",
+      "          RIPO |     -.024161      .7690541    -.4841682     4.048028\n",
+      "          NIPO |     -.019258      .8824202    -.6558655     3.174284\n",
+      "          TURN |    -.0066866       .966291    -1.090823     4.038252\n",
+      "            SR |    -5.31e-17             1    -1.194293     1.809183\n",
+      "          lnPD |    -5.17e-17             1    -1.599172     1.684049\n",
       "  -------------------------------------------------------------------\n",
       "\n",
       ". \n"
@@ -519,9 +551,13 @@
    ],
    "source": [
     "%%stata -d df_pca -force\n",
-    "/*主成分分析*/\n",
+    "//缩尾\n",
+    "winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
     "\n",
-    "/*主成分分析*/\n",
+    "//共线性测试\n",
+    "factortest CEFD NIPO RIPO SR TURN lnPD\n",
+    "\n",
+    "//主成分分析\n",
     "pca CEFD RIPO NIPO TURN SR lnPD, means"
    ],
    "metadata": {
