--- a/notebooks/IS-Investor.ipynb
+++ b/notebooks/IS-Investor.ipynb
@@ -1929,9 +1929,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "stata",
+   "name": "pytorch",
    "language": "python",
-   "display_name": "Stata"
+   "display_name": "Rapids"
   },
   "language_info": {
    "codemirror_mode": {
