--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -72,6 +72,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 指标计算"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### 股利溢价 lnPD\n",
     "SgnYear [统计年度] - YYYY\n",
     "Dnum [分红公司数目] - 指当年发生了现金分红的上市公司数量\n",
@@ -370,7 +379,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 合成"
+    "## 指标合成"
    ],
    "metadata": {
     "collapsed": false
@@ -440,6 +449,15 @@
     "df_pca = merge_bw()\n",
     "df_pca.to_csv('/home/ubuntu/notebooks/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/BW6.csv')\n",
     "df_pca"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 主成分分析"
    ],
    "metadata": {
     "collapsed": false
