--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -404,6 +404,7 @@
     "    \"\"\"\n",
     "    合成函数\n",
     "    \"\"\"\n",
+    "\n",
     "    df = cal_cefd().to_pandas().join(cal_ipo().to_pandas(), how='outer').join(cal_turn().to_pandas(), how='outer')\n",
     "    df.index.names = ['trade_date']\n",
     "    df = df.reset_index()\n",
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -485,6 +486,21 @@
       "\n",
       ". //缩尾\n",
       ". winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
+      "\n",
+      ". \n",
+      ". //相关矩阵\n",
+      ". corr CEFD RIPO NIPO TURN SR lnPD\n",
+      "(obs=2,917)\n",
+      "\n",
+      "             |     CEFD     RIPO     NIPO     TURN       SR     lnPD\n",
+      "-------------+------------------------------------------------------\n",
+      "        CEFD |   1.0000\n",
+      "        RIPO |   0.1745   1.0000\n",
+      "        NIPO |   0.1953   0.4627   1.0000\n",
+      "        TURN |  -0.1680   0.1200   0.0918   1.0000\n",
+      "          SR |  -0.1094  -0.3436  -0.0397  -0.0209   1.0000\n",
+      "        lnPD |   0.2112   0.4774   0.2044  -0.0761  -0.7366   1.0000\n",
+      "\n",
       "\n",
       ". \n",
       ". //共线性测试\n",
@@ -571,6 +587,9 @@
     "%%stata -d df_pca -force\n",
     "//缩尾\n",
     "winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
+    "\n",
+    "//相关矩阵\n",
+    "corr CEFD RIPO NIPO TURN SR lnPD\n",
     "\n",
     "//共线性测试\n",
     "factortest CEFD NIPO RIPO SR TURN lnPD\n",
