--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -810,6 +810,20 @@
       "> 867 )\n",
       "(1 missing value generated)\n",
       "\n",
+      ". \n",
+      ". //corr\n",
+      ". pwcorr SENT_INDEX CEFD RIPO NIPO l1_TURN SR lnPD,star(0.01)\n",
+      "\n",
+      "             | SENT_I~X     CEFD     RIPO     NIPO  l1_TURN       SR     lnPD\n",
+      "-------------+---------------------------------------------------------------\n",
+      "  SENT_INDEX |   1.0000 \n",
+      "        CEFD |   0.4682*  1.0000 \n",
+      "        RIPO |   0.7549*  0.1525*  1.0000 \n",
+      "        NIPO |   0.7144*  0.1625*  0.3354*  1.0000 \n",
+      "     l1_TURN |   0.1441* -0.1603*  0.1096*  0.1117*  1.0000 \n",
+      "          SR |  -0.4665* -0.1113* -0.2908* -0.0382  -0.0182   1.0000 \n",
+      "        lnPD |   0.6268*  0.2144*  0.4048*  0.1779* -0.0807* -0.7366*  1.0000 \n",
+      "\n",
       ". \n"
      ]
     }
@@ -824,7 +838,10 @@
     "// PCA\n",
     "pca CEFD RIPO NIPO l1_TURN SR lnPD , mineigen(1)\n",
     "predict f1 f2 f3\n",
-    "ge SENT_INDEX = (0.3790*f1 + 0.2021*f2 + 0.1867*f3 ) / (0.3790 + 0.2021 + 0.1867 )"
+    "ge SENT_INDEX = (0.3790*f1 + 0.2021*f2 + 0.1867*f3 ) / (0.3790 + 0.2021 + 0.1867 )\n",
+    "\n",
+    "//corr\n",
+    "pwcorr SENT_INDEX CEFD RIPO NIPO l1_TURN SR lnPD,star(0.01)"
    ],
    "metadata": {
     "collapsed": false
@@ -837,6 +854,36 @@
    "source": [
     "# @formatter:on"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        date  c_yoy  p_yoy\n0    01/1994   22.0    NaN\n1    02/1994   30.3    NaN\n2    03/1994   23.9    NaN\n3    04/1994   24.3    NaN\n4    05/1994   26.1    NaN\n..       ...    ...    ...\n343  08/2022    5.4    4.2\n344  09/2022    2.5    6.3\n345  10/2022   -0.5    5.0\n346  11/2022   -5.9    2.2\n347  12/2022   -1.8    1.3\n\n[348 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>c_yoy</th>\n      <th>p_yoy</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>01/1994</td>\n      <td>22.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>02/1994</td>\n      <td>30.3</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>03/1994</td>\n      <td>23.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>04/1994</td>\n      <td>24.3</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>05/1994</td>\n      <td>26.1</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>343</th>\n      <td>08/2022</td>\n      <td>5.4</td>\n      <td>4.2</td>\n    </tr>\n    <tr>\n      <th>344</th>\n      <td>09/2022</td>\n      <td>2.5</td>\n      <td>6.3</td>\n    </tr>\n    <tr>\n      <th>345</th>\n      <td>10/2022</td>\n      <td>-0.5</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>346</th>\n      <td>11/2022</td>\n      <td>-5.9</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>347</th>\n      <td>12/2022</td>\n      <td>-1.8</td>\n      <td>1.3</td>\n    </tr>\n  </tbody>\n</table>\n<p>348 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"/data/DataSets/MACRO_DATA/MACRO_DATA.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
